--- a/options.html
+++ b/options.html
@@ -226,13 +226,13 @@
         <h2>Gregory Shayko - Developer</h2>
         I am a Computer Science and Engineering student at The Ohio State University. Check out <a href="http://www.greg.shaykos.com" target="_blank">my site</a> or one of my social mediums below:
         <div class="about_buttons">
-            <a href="http://www.linkedin.com/pub/gregory-shayko/28/78b/b88" target="_blank" class="zocial icon linkedin">View my LinkedIn Profile</a>
-            <a href="https://plus.google.com/118088941611474924231" target="_blank" class="zocial icon googleplus">View my Google+ Page</a>
-            <a href="http://www.facebook.com/OSUGregor" target="_blank" class="zocial icon facebook">View my Facebook Profile</a>
-            <a href="https://github.com/osugregor" target="_blank" class="zocial icon github">Visit my GitHub Page</a>
+            <a href="http://www.linkedin.com/pub/gregory-shayko/28/78b/b88" target="_blank" class="zocial icon linkedin" title="View my LinkedIn Profile">LinkedIn</a>
+            <a href="https://plus.google.com/118088941611474924231" target="_blank" class="zocial icon googleplus" title="View my Google+ Page">Google+</a>
+            <a href="http://www.facebook.com/OSUGregor" target="_blank" class="zocial icon facebook" title="View my Facebook Profile">Facebook</a>
+            <a href="https://github.com/osugregor" target="_blank" class="zocial icon github" title="Visit my GitHub Page">GitHub</a>
             <a href="https://www.wunderkit.com/#/google-events-widget-antp" target="_blank" class="wunderkit" title="Project Management Site"></a>
-            <a href="http://greg.shaykos.com/calendar" target="_blank" class="zocial icon cal">Open my Google Calendar</a>
-            <a href="mailto:greg@shaykos.com" class="zocial icon email">Send me an email</a>
+            <a href="http://greg.shaykos.com/calendar" target="_blank" class="zocial icon cal" title="Open my Google Calendar">Google Calendar</a>
+            <a href="mailto:greg@shaykos.com" class="zocial icon email" title="Send me an email">Rmail</a>
         </div>
 	</section>
 
@@ -267,6 +267,12 @@
 
 	<section id="updates">
 		<h1>Updates</h1>
+
+        <h2 class="first">Version 1.2.2</h2>
+        <ul>
+            <li>Fixed a small bug with Updating Calendars not going away.</li>
+        </ul>
+
         <h2 class="first">Version 1.2.1</h2>
         <ul>
             <li>Improved the options page layout</li>
