--- a/background.html
+++ b/background.html
@@ -2,7 +2,6 @@
    - For https://chrome.google.com/webstore/detail/mgmiemnjjchgkmgbeljfocdjjnpjnmcg
    -->
 <script src="js/jquery.js" type="text/javascript"></script>
-<script src="js/ext-core.js" type="text/javascript"></script>
 <script src="js/calendar.js" type="text/javascript"></script>
 <script src="js/helpers.js" type="text/javascript"></script>
 
@@ -15,10 +14,10 @@
 	  "height"  :   2,              // 200 px default
 	  "path"    :   "widget.html",
 	  "v2"      :   {
-	                  "resize"    :   false,  // Set to true ONLY if you create a range below.
+	                  "resize"    :   true,  // Set to true ONLY if you create a range below.
 	                  "min_width" :   1,
-	                  "max_width" :   1,
-	                  "min_height":   1,
+	                  "max_width" :   2,
+	                  "min_height":   2,
 	                  "max_height":   2
 	                }
 	};
@@ -40,13 +39,15 @@
         var w = Blz.Widget,
             gcal = Blz.Google.Calendar,
             app = MyGoogleCal.Application;
-        window.localStorage.removeItem('events'); //clear events from storage
+
+        window.localStorage.removeItem('events');
+        window.localStorage['bg_reloading'] = false;
         gcal.source = 'shayko-GoogleEventsANTP-1';
         gcal.useGoogleLogin = (w.getPref('useGoogleApps')=='1');
-        w.setPref("offset", 0);
         app.initialize();
 
         $(window).bind('storage', function(){
+            //bg_update is if we should force a bg refresh
             var bg_update = !!(localStorage.getItem("bg_update") == "true");
             if(bg_update){
                 update(true);
@@ -54,6 +55,7 @@
             }
         });
 
+        //When the user updates the tab url, for logging in
         chrome.tabs.onUpdated.addListener(onTabUpdated);
         function onTabUpdated(tabId, changeInfo) {
             var url = changeInfo.url;
@@ -76,32 +78,39 @@
             log("[NOTICE] Updating Background Page");
             localStorage["bg_reloading"] = "true";
 
+            //Refreshes the cached events
             if (force) {
                 log("[NOTICE] Forced Update!");
                 app.retrieveAllCalendar();return;
             }
+
             // Check if the application is logging in
             if (app.isLoginRequesting()) {
                 log("[WARNING] Request Login!");
-                widget_notify('login_requesting', w.getResourceString('NOW_LOGIN'));
+                widget_notify('loading', getResourceString('LOADING_EVENT'));
+                //widget_notify('login_requesting', getResourceString('NOW_LOGIN'));
                 return;
-            }else widget_notify('login_requesting', false);
+            }
+
             // Check if the client is logged in
             if (!app.isLogin()) {
                 log("[WARNING] Not Logged In!");
                 widget_alert('widget_require_login', getResourceString('SESSION_ERROR_ALERT', ["https://www.google.com/calendar/"]));
                 return;
-            }else  widget_alert('widget_require_login', false);
+            }else widget_alert('widget_require_login', false);
+
             // Check if were currently waiting for calendars
             if (app.isCalendarListRequesting()) {
                 log("[WARNING] Calendar is already requesting.");
-                widget_notify('calendars_requesting', "Updating Calendars...");
+                widget_notify('loading', getResourceString('LOADING_EVENT'));
+                //widget_notify('calendars_requesting', "Updating Calendars...");
                 return;
-            }else widget_notify('calendars_requesting', false);
+            }
+
             // Check if we have any calendars
             if (app.gcal.cacheCalendars.length == 0){
                 log("[WARNING] No cached calendars");
-                widget_notify('no_calendars', "No Calendars...");
+                widget_notify('no_calendars', getResourceString('NOTHING_DISPLAY_EVENT'));
                 return;
             }else widget_notify('no_calendars', false);
 
@@ -115,8 +124,10 @@
 			
             localStorage["events"] = JSON.stringify(events);
             localStorage["bg_reloading"] = false;
+            widget_notify('loading', false);
         }
 
+        // Local callbacks that plugin to the Google Calendar module.
         var observer = {
             onMyGoogleCalLoginCompleted: function(a, b){},
             onMyGoogleCalCalendarLoaded: function(a, b){},
@@ -140,6 +151,7 @@
         });
 
         var alerts = {};
+        //Sends an alert to the widget, which prevents the calendar from actioning
         function widget_alert(key, msg){
             alerts = JSON.parse(localStorage.getItem('widget_alert'));
             //Check if were deleting the alert
@@ -179,14 +191,16 @@
         localStorage["widget_notify"] = JSON.stringify(notifications);
         localStorage["widget_alert"] = JSON.stringify(alerts);
 
+        console.log("Local Storage On Load:");
         console.log(localStorage);
 
-        //Update every so often
         app.addObserver(observer);
 
+        //How often to update the bg refresh
         setInterval(function(){update();},w.getPref('update_interval')*60*1000);
         // update for modified events via 5 min
         setInterval(function(){update(true);},w.getPref('update_interval_force')*60*1000);
+        update(true);
 
         window.update = update; //Store Update as a global variable for external script access
     });
