--- a/widget.html
+++ b/widget.html
@@ -11,7 +11,7 @@
 	<!--  JS Files -->
     <script src="js/jquery.js" type="text/javascript"></script>
 	<script src="js/jquery.mobile-1.0.1.min.js"></script>
-    <script src="js/jquery.utility.js"></script>
+    <script src="js/jquery.utility.js"></script> <!--Loads the html producers and utility functions-->
     <script src="js/jquery.xcolor.js"></script>
 	<script src="js/helpers.js"></script>
 	<script src="js/jquery.mousewheel.js"></script>
@@ -41,7 +41,7 @@
 
             // When anything in localStorage changes
             $(window).bind('storage', function () {
-                log("[EVENT] Storage Changed", localStorage);
+                log("[EVENT: Widget] Storage Changed", localStorage);
                 var incoming_events = localStorage.getItem("events") || "";
                 var widget_update = !!(localStorage.getItem("widget_update") == "true");
                 var widget_notifications = JSON.parse(w.getPref('widget_notify'));
@@ -62,6 +62,7 @@
                         notify(key, widget_notifications[key]);
                     }
                 }
+
                 localStorage['widget_notify'] = JSON.stringify(widget_notifications);
                 reloading =  !!(localStorage.getItem("bg_reloading") == "true");
                 refreshButton();
