--- a/GoogleEvents.html
+++ b/GoogleEvents.html
@@ -10,13 +10,14 @@
 
 	<!--  JS Files -->
     <script src="lib/jquery.min.js" type="text/javascript"></script>
+    <script src="lib/moment.min.js" type="text/javascript"></script>
     <script src="lib/ShayJS.js" type="text/javascript"></script>
+    <script src="lib/ShayJS.date.js" type="text/javascript"></script>
     <script src="lib/ShayJS.utils.js" type="text/javascript"></script>
     <script src="lib/ShayJS.antp.Widget.js" type="text/javascript"></script>
     <script src="lib/ShayJS.google.js" type="text/javascript"></script>
     <script src="js/jquery.utility.js"></script>
     <script src="js/jquery.xcolor.js"></script>
-	<script src="js/helpers.js"></script>
 	<script src="js/jquery.mousewheel.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
 
