Notifications Refresh is working ALmost good for release

--- a/options.html
+++ b/options.html
@@ -5,10 +5,11 @@
     <script src="js/google.track.js"></script>
     <script type="text/javascript" src="lib/jquery.min.js"></script>
     <script type="text/javascript" src="lib/shayjs.js"></script>
-    <script type="text/javascript" src="lib/shayjs.antp.widget.js"></script>
+    <script type="text/javascript" src="lib/shayjs.antp.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
     <script type="text/javascript" src="js/jquery.gritter.min.js"></script>
+    <script type="text/javascript" src="js/defaults.js"></script>
     <script type="text/javascript" src="js/options.js"></script>
 	
 	<link href='css/zocial.css' rel='stylesheet' type='text/css'>
