--- a/GoogleEvents.html
+++ b/GoogleEvents.html
@@ -11,13 +11,14 @@
     <script src="lib/moment.min.js" type="text/javascript"></script>
     <script src="lib/ShayJS.js" type="text/javascript"></script>
     <script src="lib/ShayJS.date.js" type="text/javascript"></script>
-    <script src="lib/ShayJS.utils.js" type="text/javascript"></script>
-    <script src="lib/ShayJS.antp.Widget.js" type="text/javascript"></script>
+    <script src="lib/ShayJS.antp.js" type="text/javascript"></script>
     <script src="lib/ShayJS.google.js" type="text/javascript"></script>
     <script src="js/jquery.utility.js"></script>
     <script src="js/jquery.xcolor.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
 	<script src="js/jquery.mousewheel.js"></script>
 
+    <script src="js/defaults.js" type="text/javascript"></script>
     <script src="js/GoogleEvents.js"></script>
     <script src="js/google.track.js"></script>
 
