Can change header color

--- a/GoogleEvents.html
+++ b/GoogleEvents.html
@@ -11,7 +11,7 @@
 
 	<div id="events">
         <div class="google-header" data-role="header" data-theme="b">
-            <h1><a href="https://www.google.com/calendar/" target="_top">Google Calendar</a></h1>
+            <h1 id="header_text"><a href="https://www.google.com/calendar/" target="_top"></a></h1>
             <a id="settings" class="control" href="options.html" target="_top"><span></span></a>
             <span id="refresh" class="control"></span>
         </div><!-- /header -->
