Removed unused widget file

--- a/options.html
+++ b/options.html
@@ -162,6 +162,14 @@
 	<section id="updates">
 		<h1>Updates</h1>
 
+        <h2 class="first">Version 2.0.0</h2>
+        <ul>
+            <li>Re-write of google calendar atom feeds integration.</li>
+            <li>Removed the jQuery mobile dependency</li>
+            <li>Better options page: Can change colors and settings, more options coming soon.</li>
+            <li>Created a simple antp API for widget communication.</li>
+        </ul>
+
         <h2 class="first">Version 1.2.2</h2>
         <ul>
             <li>Fixed a small bug with Updating Calendars not going away.</li>
