Fixed an issue with URL Encoding

--- a/options.html
+++ b/options.html
@@ -162,6 +162,17 @@
 	<section id="updates">
 		<h1>Updates</h1>
 
+        <h2 class="first">Version 2.1.1</h2>
+        <ul>
+            <li>Improved the alerts so they are positioned on top as opposed to an overlay.</li>
+            <li>Removed the fetching message, the refresh button is the only indicator really needed...</li>
+        </ul>
+        <h3>Bug Fixes</h3>
+        <ul>
+            <li>Major Bug fix with Calendar URL's not being Encoded. A big thanks to Alex on helping me with this issue.</li>
+            <li>Bug Fix: Refresh button no longer spins an infinite loop.</li>
+        </ul>
+
         <h2 class="first">Version 2.0.0</h2>
         <ul>
             <li>Re-write of google calendar atom feeds integration.</li>
