--- a/GoogleEvents.html
+++ b/GoogleEvents.html
@@ -18,10 +18,10 @@
     <!--  JS Files -->
     <script src="lib/jquery.min.js" type="text/javascript"></script>
     <script src="lib/moment.min.js" type="text/javascript"></script>
-    <script src="lib/ShayJS.js" type="text/javascript"></script>
-    <script src="lib/ShayJS.date.js" type="text/javascript"></script>
-    <script src="lib/ShayJS.antp.js" type="text/javascript"></script>
-    <script src="lib/ShayJS.google.js" type="text/javascript"></script>
+    <script src="lib/shayjs.js" type="text/javascript"></script>
+    <script src="lib/shayjs.date.js" type="text/javascript"></script>
+    <script src="lib/shayjs.antp.js" type="text/javascript"></script>
+    <script src="lib/shayjs.google.js" type="text/javascript"></script>
     <script src="js/jquery.utility.js"></script>
     <script src="js/jquery.xcolor.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
